比较好的备份版本

--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: YuanMing
-subtitle: =============
+title: Ben.Y
+subtitle: chances are for people who are prepared
 description: “准备开启研究生之旅”
 keywords:
 author: 一个据说只有20的青年
