--- a/_config.yml
+++ b/_config.yml
@@ -103,3 +103,9 @@ search:
   field: post
   format: html
   limit: 10000
+
+  # sitemap
+sitemap:
+  path: sitemap.xml
+baidusitemap:
+  path: baidusitemap.xml
