--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http:/benym.github.io
+url: http://www.benym.cn
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -94,9 +94,10 @@ theme: ym
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type: git
+- type: git
   repository: git@github.com:benym/benym.github.io.git
   branch: master
+- type: baidu_url_submitter   
 
 search:
   path: search.xml
@@ -104,8 +105,18 @@ search:
   format: html
   limit: 10000
 
-  # sitemap
+#sitemap
 sitemap:
   path: sitemap.xml
 baidusitemap:
   path: baidusitemap.xml
+  
+baidu_url_submit:
+  ## 提交最新的10个链接
+  count: 10 
+  ## 在百度站长平台中注册的域名
+  host: www.benym.cn
+  ## 请注意这是您的秘钥， 所以请不要把博客源代码发布在公众仓库里!
+  token: D2aWtYo3nKfPaQ2F 
+  ## 文本文档的地址， 新链接会保存在此文本文档里
+  path: baidu_urls.txt 
