--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "hexo": "^3.7.1",
     "hexo-baidu-url-submit": "0.0.5",
     "hexo-deployer-git": "^0.3.1",
+    "hexo-filter-github-emojis": "^1.4.4",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-baidu-sitemap": "^0.1.2",
     "hexo-generator-category": "^0.1.3",
