--- a/themes/ym/_config.yml
+++ b/themes/ym/_config.yml
@@ -434,9 +434,9 @@ gitment:
 # Available value:
 #    button | slide
 # Warning: Baidu Share does not support https.
-baidushare:
-  type: slide
-  baidushare: false
+#baidushare:
+#  type: slide
+#  baidushare: true
 
 # Share
 # This plugin is more useful in China, make sure you known how to use it.
