--- a/themes/ym/_config.yml
+++ b/themes/ym/_config.yml
@@ -712,7 +712,7 @@ pace: true
 pace_theme: pace-theme-flash
 
 # Canvas-nest
-canvas_nest: true
+canvas_nest: false
 
 # three_waves
 three_waves: false
