--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "hexo-baidu-url-submit": "0.0.5",
     "hexo-deployer-git": "^0.3.1",
     "hexo-filter-github-emojis": "^1.4.4",
+    "hexo-filter-optimize": "^0.2.5",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-baidu-sitemap": "^0.1.2",
     "hexo-generator-category": "^0.1.3",
@@ -21,6 +22,7 @@
     "hexo-renderer-marked": "^0.3.0",
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.0",
+    "hexo-service-worker": "^1.0.1",
     "hexo-wordcount": "^3.0.2"
   },
   "devDependencies": {}
