--- a/themes/ym/_config.yml
+++ b/themes/ym/_config.yml
@@ -137,7 +137,9 @@ social:
   GitHub: https://github.com/benym || github
   微博: http://weibo.com/u/5177359899 || weibo
   bilibili: https://space.bilibili.com/7692324/ || heartbeat
-  知乎: https://www.zhihu.com/people/xu-ge-yuan-ba-68/activities
+  知乎: https://www.zhihu.com/people/xu-ge-yuan-ba-68/activities || book
+  CSDN: https://blog.csdn.net/qq_34438435 || contao
+  简书: https://www.jianshu.com/u/4235d6a189fd || bookmark
   #E-Mail: mailto:yourname@gmail.com || envelope
   #Google: https://plus.google.com/yourname || google
   #Twitter: https://twitter.com/yourname || twitter
@@ -156,7 +158,9 @@ social_icons:
   GitHub: github
   微博: weibo
   bilibili: heartbeat
-  知乎: zhihu
+  知乎: book
+  CSDN: contao
+  简书: bookmark
 
 # Blog rolls
 links_icon: link
@@ -164,8 +168,8 @@ links_title: Links
 links_layout: block
 #links_layout: inline
 links:
-  felablog: http://felamin.xyz
-  baoshiblog: https://unclegem.cn
+  Felamin: http://felamin.xyz
+  Unclegem: https://unclegem.cn
 
 # Sidebar Avatar
 # in theme directory(source/images): /images/avatar.gif
