--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Ben.Y
+title: Ming.Y
 subtitle: Chances are for people who are prepared
 description: “准备开启研究生之旅”
 keywords:
