--- a/_config.yml
+++ b/_config.yml
@@ -147,6 +147,23 @@ service_worker:
   stripPrefix: public
   verbose: true
 
+live2d:
+  enable: true
+  scriptFrom: local
+  pluginRootPath: live2dw/
+  pluginJsPath: lib/
+  pluginModelPath: assets/
+  tagMode: false
+  debug: false
+  model:
+    use: live2d-widget-model-tororo
+  display:
+    position: left
+    width: 250
+    height: 500
+  mobile:
+    show: true
+
 # Extensions
 Plugins: 
 - hexo-generator-feed
