--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.7.1"
+    "version": "3.9.0"
   },
   "dependencies": {
     "hexo": "^3.7.1",
@@ -19,6 +19,7 @@
     "hexo-generator-searchdb": "^1.0.8",
     "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^0.2.0",
+    "hexo-helper-live2d": "^3.1.1",
     "hexo-inject": "^1.0.0",
     "hexo-math": "^3.0.4",
     "hexo-renderer-ejs": "^0.3.0",
@@ -26,7 +27,8 @@
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.0",
     "hexo-service-worker": "^1.0.1",
-    "hexo-wordcount": "^3.0.2"
+    "hexo-wordcount": "^3.0.2",
+    "live2d-widget-model-tororo": "^1.0.5"
   },
   "devDependencies": {}
 }
