新增阅读滚动条 修改页面滚动条样式 新增文章分享功能

--- a/themes/ym/_config.yml
+++ b/themes/ym/_config.yml
@@ -354,7 +354,13 @@ font:
     external: true
     family: Roboto Mono
     size:
-
+  # Add copy button on codeblock
+codeblock:
+  border_radius:
+  copy_button:
+    enable: true
+    # Show text copy result
+    show_result: true
 
 # ---------------------------------------------------------------
 # Third Party Services Settings
@@ -466,16 +472,16 @@ baidushare: false
 #           Technorati,Posterous,Tumblr,GoogleBookmarks,Newsvine,
 #           Evernote,Friendfeed,Vkontakte,Odnoklassniki,Mailru
 needmoreshare2:
-  enable: false
+  enable: true
   postbottom:
-    enable: false
+    enable: true
     options:
       iconStyle: box
       boxForm: horizontal
       position: bottomCenter
       networks: Weibo,Wechat,Douban,QQZone,Twitter,Facebook
   float:
-    enable: false
+    enable: true
     options:
       iconStyle: box
       boxForm: horizontal
